<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="ro.pub.cs.systems.eim.lab03.phonedialer.PhoneDialerActivity"
    >

    <EditText
        android:id="@+id/phone_number_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:inputType="phone"
        android:minHeight="48dp"
        android:text="@string/empty" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"
        />

    <GridLayout
        android:id="@+id/grid_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:rowCount="6"
        android:columnCount="3"
    >

        <ImageButton
            android:id="@+id/backspace"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_row="0"
            android:layout_column="2"
            android:contentDescription="@string/empty"
            android:src="@drawable/backspace" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"
            />

        <Button
            android:id="@+id/button_1"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_marginEnd="20dp"
            android:text="@string/dial_1"
            />

        <Button
            android:id="@+id/button_2"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_marginEnd="20dp"
            android:text="@string/dial_2"
           />

        <Button
            android:id="@+id/button_3"
            android:layout_row="1"
            android:layout_column="2"
            android:layout_marginEnd="20dp"
            android:text="@string/dial_3"
            />

        <Button
            android:id="@+id/button_4"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_marginEnd="20dp"
            android:text="@string/dial_4"
            />

        <Button
            android:id="@+id/button_5"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_marginEnd="20dp"
            android:text="@string/dial_5"
            />

        <Button
            android:id="@+id/button_6"
            android:layout_row="2"
            android:layout_column="2"
            android:layout_marginEnd="20dp"
            android:text="@string/dial_6"
            />

        <Button
            android:id="@+id/button_7"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_marginEnd="20dp"
            android:text="@string/dial_7"
            />

        <Button
            android:id="@+id/button_8"
            android:layout_row="3"
            android:layout_column="1"
            android:layout_marginEnd="20dp"
            android:text="@string/dial_8"
            />

        <Button
            android:id="@+id/button_9"
            android:layout_row="3"
            android:layout_column="2"
            android:layout_marginEnd="20dp"
            android:text="@string/dial_9"
            />

        <Button
            android:id="@+id/button_star"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_marginEnd="20dp"
            android:text="@string/dial_star"
            />

        <Button
            android:id="@+id/button_0"
            android:layout_row="4"
            android:layout_column="1"
            android:layout_marginEnd="20dp"
            android:text="@string/dial_0"
            />

        <Button
            android:id="@+id/button_hash"
            android:layout_row="4"
            android:layout_column="2"
            android:layout_marginEnd="20dp"
            android:text="@string/dial_hash"
            />

        <ImageButton
            android:id="@+id/button_call"
            android:src="@drawable/call"
            android:layout_row="5"
            android:layout_column="0"
            android:layout_marginTop="10dp"
            android:layout_width="50dp"
            android:layout_height="50dp"
            />

        <ImageButton
            android:id="@+id/button_hangup"
            android:src="@drawable/hangup"
            android:layout_row="5"
            android:layout_column="2"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            />
    </GridLayout>

</LinearLayout>
